5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1621_2921.log
== TEST (2019-04-01 18:25:58) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 25/100
print(d)
-- OUTPUT:
0.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:26:52) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 25/100
t = j2 - (j2 * d)
print(t)
-- OUTPUT:
66.9375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:27:36) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 25/100
t = j2 - (j2 * d)
print(round(t, 2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:27:56) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 25/100
t = j2 - (j2 * d)
print(float(round(t, 2)
-- ERROR:
File "XXXX", line 6
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:13) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 25/100
t = j2 - (j2 * d)
print(float(round(t, 2))
-- ERROR:
File "XXXX", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:20) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 25//100
t = j2 - (j2 * d)
print(float(round(t, 2))
-- ERROR:
File "XXXX", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:29) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 25//100
t = j2 - (j2 * d)
print(round(t, 2))
-- OUTPUT:
89.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:34:55) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 0.25
t = j2 - (j2 * d)
print(round(t, 2))
-- OUTPUT:
66.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:37:02) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 0.25
t2 = j2 - (j2 * d)
t1 = j1 + j2
print(round(t2, 2))
print(round())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round())
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:37:34) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 0.25
t2 = j2 - (j2 * d)
t1 = j1 + j2
print(round(t2, 2))
print(round(t1 + t2))
-- OUTPUT:
66.94
299
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:04) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 0.25
t2 = j2 - (j2 * d)
t1 = j1 + j2
print(round(t2, 2))
print(round(t1))
-- OUTPUT:
66.94
232
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:33) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 0.25
t2 = j2 - (j2 * d)
t1 = j1 + j2
print(round(t2, 2))
print(round(t1/2))
-- OUTPUT:
66.94
116
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:05) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 0.25
t2 = j2 - (j2 * d)
t1 = j1 + j2
print(round(t2, 2))
print(round(t1*d))
-- OUTPUT:
66.94
58
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:44) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 0.25
t2 = j2 - (j2 * d)
t1 = j1 + j2
print(round(t2, 2))
print(round(t1+d))
-- OUTPUT:
66.94
232
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:47) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 0.25
t2 = j2 - (j2 * d)
t1 = j1 + t2
print(round(t2, 2))
print(round(t1, 2)
-- ERROR:
File "XXXX", line 8
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:06) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 0.25
t2 = j2 - (j2 * d)
t1 = j1 + t2
print(round(t2, 2))
print(t1)
-- OUTPUT:
66.94
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:43:23) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 0.25
t2 = j2 - (j2 * d)
t1 = j1 + t2
print(round(t2, 2))
print(t1)
-- EXECUTION TIME:
0.162801
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
209.2875
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
182.4825
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
166.5225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:55) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 0.25
t2 = j2 - (j2 * d)
t1 = j1 + t2
print(round(t2, 2))
print(round(t1, 2))
-- OUTPUT:
66.94
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:44:05) 
-- CODE:
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = 0.25
t2 = j2 - (j2 * d)
t1 = j1 + t2
print(round(t2, 2))
print(round(t1, 2))
-- EXECUTION TIME:
0.163099
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
166.52
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
